change the second window

--- a/view/resource.qrc
+++ b/view/resource.qrc
@@ -4,5 +4,9 @@
     </qresource>
     <qresource prefix="/quest">
         <file>question.jpg</file>
+        <file>bgrd.png</file>
+        <file>back.png</file>
+        <file>logo.png</file>
+        <file>logo2.png</file>
     </qresource>
 </RCC>
