--- a/different_quantity.ui
+++ b/different_quantity.ui
@@ -6,7 +6,7 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>595</width>
+    <width>766</width>
     <height>91</height>
    </rect>
   </property>
@@ -23,14 +23,14 @@
    <bool>false</bool>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 145, 10);</string>
+   <string notr="true">background-color: rgb(255, 21, 126)</string>
   </property>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>551</width>
+     <width>721</width>
      <height>51</height>
     </rect>
    </property>
@@ -44,7 +44,7 @@
 </string>
    </property>
    <property name="text">
-    <string> Разное количество данных для абсцисс и ординат!</string>
+    <string> Разное количество данных для абсцисс и ординат или нет данных!</string>
    </property>
    <property name="maxLength">
     <number>32770</number>
@@ -53,7 +53,7 @@
     <bool>false</bool>
    </property>
    <property name="cursorPosition">
-    <number>48</number>
+    <number>63</number>
    </property>
    <property name="readOnly">
     <bool>true</bool>
