--- a/wrong_input.ui
+++ b/wrong_input.ui
@@ -14,7 +14,7 @@
    <string>Ошибка</string>
   </property>
   <property name="styleSheet">
-   <string notr="true">background-color: rgb(255, 145, 10);</string>
+   <string notr="true">background-color: rgb(255, 21, 126)</string>
   </property>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
